log/build_2026-06-10_21-59-48/hexmovr_moto_panel/stdout_stderr.log
Consolidate compiler generated dependencies of target hexmovr_moto_panel
[ 50%] Building CXX object CMakeFiles/hexmovr_moto_panel.dir/src/hexmovr_panel.cpp.o
/home/hexmovr02/hexmovr_manager/src/hexmovr_moto_panel/src/hexmovr_panel.cpp: In lambda function:
/home/hexmovr02/hexmovr_manager/src/hexmovr_moto_panel/src/hexmovr_panel.cpp:1133:16: error: ‘class QWidget’ has no member named ‘setText’
 1133 |         label->setText(text);
      |                ^~~~~~~
gmake[2]: *** [CMakeFiles/hexmovr_moto_panel.dir/build.make:76：CMakeFiles/hexmovr_moto_panel.dir/src/hexmovr_panel.cpp.o] 错误 1
gmake[1]: *** [CMakeFiles/Makefile2:137：CMakeFiles/hexmovr_moto_panel.dir/all] 错误 2
gmake: *** [Makefile:146：all] 错误 2
